# fontconfig-rs

fontconfig/: Cargo.toml
fontconfig-sys/: Cargo.toml
fontconfig-sys/src/: lib.rs
fontconfig/src/: lib.rs
